--- a/notebooks/llama_cookbook.ipynb
+++ b/notebooks/llama_cookbook.ipynb
@@ -12,7 +12,7 @@
     "import gdown # type: ignore\n",
     "import tarfile\n",
     "\n",
-    "source_URL = ''\n",
+    "source_URL = 'https://drive.google.com/file/d/14IkKAzJ9n1qcfSq-XCi8w7LfrDcqt0nX/view?usp=sharing'\n",
     "local_data_file = '../models/llama2_7b'\n",
     "untar_dir = './models/llama2_7b/'\n",
     "\n",
